--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
 import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 const pageTitle = "About Me";
 const identity = {
   firstName: "Sarah",
@@ -14,6 +16,8 @@ const goal = 3;
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 
 const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -21,21 +25,20 @@ const skillColor = "navy";
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{pageTitle}</title>
-    <style>
+    <style define:vars={{ skillColor }}>
       h1 {
         color: purple;
         font-size: 4rem;
       }
       .skill {
         color: var(--skillColor);
-        font-weight: bold;
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
       }
     </style>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header />
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
@@ -79,4 +82,8 @@ const skillColor = "navy";
       )
     }
   </body>
+  <Footer />
+  <script>
+    import "../scripts/menu.js";
+  </script>
 </html>
