--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import Header from "../components/Header.astro";
+import "../styles/global.css";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -10,6 +13,7 @@
     <title>Astro</title>
   </head>
   <body>
+    <Header />
     <h1>About Me</h1>
     <h2>... and my new Astro site!</h2>
 
@@ -22,5 +26,9 @@
       This site will update as I complete more of the tutorial, so keep checking
       back and see how my journey is going!
     </p>
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
