--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,6 +19,9 @@ h1 {
   margin: 1rem 0;
   font-size: 2.5rem;
 }
+
+/* nav styles */
+
 .hamburger {
   padding-right: 20px;
   cursor: pointer;
@@ -31,6 +34,7 @@ h1 {
   margin-bottom: 10px;
   background-color: #ff9776;
 }
+
 .nav-links {
   width: 100%;
   top: 5rem;
@@ -71,5 +75,9 @@ a:focus {
   .nav-links a {
     display: inline-block;
     padding: 15px 20px;
+  }
+
+  .hamburger {
+    display: none;
   }
 }
