--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ const identity = {
   hobbies: ["photography", "birdwatching", "baseball"],
 };
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
@@ -77,4 +77,5 @@ const textCase = "uppercase";
       )
     }
   </BaseLayout>
+
 </html>
