--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,10 @@
-html {
-  background-color: #f1f5f9;
-  font-family: sans-serif;
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
 }
 
 body {
